# tessera

./: .editorconfig  .gitattributes  .gitignore  .lintstagedrc  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  SPEC.md  biome.json  buf.yaml  commitlint.config.ts  docker-compose.yml  package.json  turbo.json
.claude/: settings.json
services/git/: Cargo.toml  README.md  build.rs  package.json
services/git/src/: config.rs  lib.rs  main.rs
services/git/src/application/: git_storage.rs  mod.rs
services/git/src/domain/: mod.rs  repository.rs  repository_error.rs  repository_id.rs
services/git/src/grpc/: git_storage_service.rs  mod.rs
services/git/src/infrastructure/: bare_repository.rs  mod.rs  repository_storage.rs
services/git/src/smart_http/: mod.rs
services/git/src/smart_http/application/: mod.rs  smart_http.rs
services/git/src/smart_http/domain/: mod.rs  smart_http.rs
services/git/src/smart_http/http/: mod.rs  request_handler.rs  response.rs  router.rs
services/git/src/smart_http/infrastructure/: api_authorizer.rs  git_http_backend.rs  mod.rs
services/git/src/ssh/: mod.rs
services/git/src/ssh/application/: mod.rs
services/git/src/ssh/domain/: command.rs  error.rs  mod.rs  types.rs
services/git/src/ssh/infrastructure/: api_authorizer.rs  git_ssh_backend.rs  host_key.rs  mod.rs  server.rs
services/git/src/storage/: mod.rs
services/git/src/storage/application/: git_storage.rs
services/git/src/storage/grpc/: auth_interceptor.rs  git_storage_service.rs  mod.rs
services/git/tests/: repository_storage.rs  smart_http.rs  ssh.rs
(+431 files in other folders)
