[package]
name = "tessera-git"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
prost = "0.14"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread"] }
tonic = "0.14"
tonic-prost = "0.14"
uuid = { version = "1", features = ["std"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
