[package]
name = "tessera-git"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
axum = "0.8"
bytes = "1"
dotenvy = "0.15"
http = "1"
prost = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread"] }
tonic = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["std"] }
walkdir = "2"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
